--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@
     font-family: "Sonsie One", system-ui;
     font-weight: 400;
     font-style: normal;
-    /* font-size: 10px; */
+    color: #fff;
 }
 
 nav {
@@ -13,6 +13,7 @@ nav {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    font-size: 15px;
 }
 
 .button {
